iou-app/objects/Apex_Violation__c/Apex_Violation__c.object-meta.xml
<CustomObject>
    <description>Apex Violations hold the violations found during SFCA scans with the selected PMD ruleset. These violations form the derived metrics for the related Apex Class.</description>
    <label>Apex Violation</label>
    <nameField>
        <displayFormat>Violation-{0000}</displayFormat>
        <label>Apex Violation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>