iou-app/objects/Apex_Violation__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>The Apex Class that has the violation.</description>
    <inlineHelpText>The Apex Class that has the violation.</inlineHelpText>
    <label>Apex Class</label>
    <referenceTo>Apex_Class__c</referenceTo>
    <relationshipLabel>Apex Violations</relationshipLabel>
    <relationshipName>Apex_Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>