iou-app/objects/Apex_Violation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The category of the violation, as defined in the IOU App.</description>
    <inlineHelpText>The category of the violation, as defined in the IOU App.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ineffectual Tests, Cost to Understand &amp; Maintain, Cost to Change &amp; Test, Code Smell, Bad Practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>