iou-app/objects/Apex_Violation__c/fields/Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Score__c</fullName>
    <description>Both cognitive and cyclomatic complexity are assigned numeric scores</description>
    <inlineHelpText>Both cognitive and cyclomatic complexity are assigned numeric scores</inlineHelpText>
    <label>Complexity Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>