iou-app/objects/Apex_Violation__c/fields/Current_Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Complexity_Score__c</fullName>
    <description>This value is used to store updates on subsequent PMD scans. By providing a separate field, we can preserve the starting score.</description>
    <label>Current Complexity Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>