iou-app/objects/Apex_Violation__c/fields/Ending_Line__c.field-meta.xml
<CustomField>
    <fullName>Ending_Line__c</fullName>
    <description>In the class, the line number where the violation ends.</description>
    <label>Ending Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>