iou-app/objects/Apex_Violation__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <description>The rule that was violated.</description>
    <inlineHelpText>The rule that was violated.</inlineHelpText>
    <label>Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>