iou-app/objects/Apex_Violation__c/fields/Starting_Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Starting_Complexity_Score__c</fullName>
    <description>This field is written during the initial code scan and should not be updated afterwards. It provides a starting point and a way to measure progress.</description>
    <label>Starting Complexity Score</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>