iou-app/objects/Apex_Violation__c/fields/Starting_Line__c.field-meta.xml
<CustomField>
    <fullName>Starting_Line__c</fullName>
    <description>In the class, the line number where the violation starts.</description>
    <label>Starting Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>